--- a/style.css
+++ b/style.css
@@ -1,8 +1,3 @@
-/*
- * Use this CSS to learn some intersting techniques,
- * in case you're wondering how I built the UI.
- * Have fun! 😁
- */
 
  * {
     margin: 0;
@@ -294,4 +289,10 @@
   
   .timer {
     font-weight: 600;
+  }
+  .welcome_page{
+    margin-top: 20px;
+    margin-right: 30px;
+    float: right;
+    font-size: 14px
   }
